<resources>
    <string name="app_name">Knee Test</string>
    <string name="homeScreenTitle">Home</string>
    <string name="next">Next</string>

    <string name="loginPageTitle">Welcome!</string>
    <string name="loginPageButtonTitle">Continue</string>
    <string name="loginActivityInfo">This application (for health professionnals only) allow you to ask questions about the condition of a patient\'s knee. At the end of these questions, a score is calculated and recommendations are given on what action(s) to take.</string>
    <string name="RPPSFieldPlaceholder">RPPS number</string>
    <string name="content_description_end_icon">A person icon</string>
    <string name="previous">Previous</string>
    <string name="home_caption">Click the button below to start a new evaluation</string>
    <string name="mainActivityInfo">Entered data are never saved on the device or on a server. You will however be allowed to send the final score via e-mail.</string>
    <string name="sfaLogoDescription">Icon of the French Arthroscopia Association</string>
    <string name="doctorIllustrationDescription">Illustration of a doctor</string>
    <string name="newQuizTitle">New score</string>
    <string name="submitButtonQuestionTitle">NEXT</string>
    <string name="revertButtonTitle">Previous</string>
    <string name="submitButtonFormTitle">DONE</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="not_answered_question_error">Please answer the question to continue.</string>
    <string name="logOutIndicationMessage">Veuillez appuyer sur le bouton Déconnexion afin de revenir à l\'écran précédent.</string>
    <string name="examResultTitle">Test results</string>
    <string name="alertTitle">Information</string>
    <string name="alertMessage">By continuing on this application,  you commit to be a health professionnal.</string>
    <string name="logOutButtonTitle">Close</string>
    <string name="alertMessageNotSamePasswords">The passwords do not match.</string>
    <string name="jsonFileName">questions</string>
    <string name="resultsPageTitle">Score done!</string>
    <string name="resultsPageIndication">Final score:</string>
    <string name="resultsPageNamePlaceholder">Patient name</string>
    <string name="resultsPageFirstNamePlaceholder">Patient First Name</string>
    <string name="resultsPageBirthYearPlaceholder">Patient Birth Year</string>
    <string name="resultsPageEmailPlaceholder">Your email address</string>
    <string name="resultsPageEmailInformation">Please note that the following information will be included in the result file you will be able to send by e-mail. The data will be deleted from the application after sending</string>
    <string name="resultsPageRememberEmail">Remember my email address</string>
    <string name="resultsPageRememberEmailInformation">You can choose to save the e-mail address on your device to avoid having to fill it in for each test.</string>
    <string name="resultsPageSeePDFButtonTitle">View the PDF</string>
    <string name="resultsPageExportPDFButtonTitle">Send the PDF</string>

    <string name="alertErrorTitle">Error</string>
    <string name="allFieldsRequiredMessage">Please fill all required fields to generate the PDF.</string>
    <string name="pdfPreviewTitle">Preview</string>
    <string name="pdfTitle">Test result</string>
    <string name="pdfPatientName">Patient name: %1$s</string>
    <string name="pdfDoctorName">Practitioner\'s email address: %1$s</string>
    <string name="pdfScore">Score: %1$d</string>
    <string name="pdfDisclaimer">This document is NOT a medical diagnosis.</string>

    <string name="exportPasswordHint">Document password</string>
    <string name="exportPasswordConfirmHint">Confirm password</string>
    <string name="exportPasswordInfo">To secure data exchange, a password is required. The same password will be requested when opening the document on another device.</string>
    <string name="showPasswordHint">Show password</string>
    <string name="sendPDFButtonTitle">Send the PDF file</string>
    <string name="exportPDFPageTitle">Export the test</string>
    <string name="exportPDFChooserTitle">Choose an email provider</string>
    <string name="exportPDFEmailSubject">Test results of %1$s</string>

    <string name="diagnosisLow">Minor knee trauma. An appointment at a doctor is recommended. No MRI necessary.</string>
    <string name="diagnosisMedium">Moderate knee trauma. A MRI is recommended with an appointment at an orthopedic surgeon or a sports doctor.</string>
    <string name="diagnosisHigh">Severe knee trauma. It is recommended to have a MRI as soon as possible as well as an appointment at an orthopedic surgeon.</string>
    <string name="adultDisclaimer">This test has been designed for adult patients and can be less relevant for children.</string>
</resources>