<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="top|center_horizontal"
    android:paddingHorizontal="15dp"
    tools:context=".QuizResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/resultsPageTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/resultsPageIndication"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="Result"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/patientNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:hint="@string/resultsPageNamePlaceholder" />

    <EditText
        android:id="@+id/doctorEmailEditText"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:hint="@string/resultsPageEmailPlaceholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsPageEmailInformation"
        android:layout_marginVertical="20dp" />

    <Switch
        android:id="@+id/rememberEmailSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultsPageRememberEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/resultsPageRememberEmailInformation"/>

    <Button
        android:id="@+id/seePDFButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsPageSeePDFButtonTitle" />

    <Button
        android:id="@+id/exportPDFButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsPageExportPDFButtonTitle" />


</LinearLayout>