<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="15dp"
    tools:context=".ShareResultActivity">

    <EditText
        android:id="@+id/documentPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:hint="@string/exportPasswordHint" />

    <EditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/exportPasswordConfirmHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportPasswordInfo"
        android:paddingVertical="15dp" />

    <Switch
        android:id="@+id/showPasswordSwitch"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showPasswordHint" />

    <Button
        android:id="@+id/exportPDFButton"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPDFButtonTitle" />

</LinearLayout>