<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/homeScreenTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/homeScreenTitle"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/sfaLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="14dp"
                android:contentDescription="@string/sfaLogoDescription"
                app:srcCompat="@drawable/logo_sfa" />

            <ImageView
                android:id="@+id/doctorIllustration"
                android:layout_width="199dp"
                android:layout_height="158dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/doctorIllustrationDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435"
                app:srcCompat="@drawable/ic_doctor_illustration" />

                <TextView
                    android:id="@+id/homeViewMainCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/home_caption"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="176dp"
                    tools:layout_editor_absoluteY="541dp" />

                <TextView
                    android:id="@+id/homeViewInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginRight="15dp"
                    android:text="@string/mainActivityInfo" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
